# emg-processing

./: .gitignore  CMakeLists.txt  README.md  pubExample.py
app/: CMakeLists.txt
app/conf/: emg_collaborator2robot.ini  emg_delsys.ini  emg_operator2robot.ini  human_collaborator.ini  human_operator.ini
app/scripts/: README.md  emg2robot.xml  emg2robot.xml.template
src/: CMakeLists.txt
src/EMGhuman/: CMakeLists.txt  EMGhuman.cpp
src/EMGhuman2robot/: CMakeLists.txt  EMGhuman2robot.cpp
src/EMGserver/: CMakeLists.txt  EMGserver.cpp
src/libraries/: CMakeLists.txt
src/libraries/libEmgSignal/: CMakeLists.txt
src/libraries/libEmgSignal/include/EmgSignal/: EmgSignal.h  ImEmgData.h
src/libraries/libEmgSignal/src/: EmgSignal.cpp
src/libraries/libEmgTcp/: CMakeLists.txt
src/libraries/libEmgTcp/include/EmgTcp/: EmgTcp.h
src/libraries/libEmgTcp/src/: EmgTcp.cpp
src/libraries/libEmgUtils/: CMakeLists.txt  emgutils.cpp  emgutils.h
src/modules/: CMakeLists.txt
src/modules/EMGhuman/: CMakeLists.txt  EMGhuman.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/modules/EMGhuman2robot/: CMakeLists.txt  EMGhuman2robot.cpp  robot_interfaces.cpp  robot_interfaces.h
src/modules/EMGserver/: CMakeLists.txt  EMGserver.cpp  EmgSignal.cpp  EmgSignal.h  EmgTcp.cpp  EmgTcp.h  ImEmgData.h  ImEmgData.msg  calculateFilterCoef.py
src/modules/EMGui/: CMakeLists.txt  emgui.cpp  emgui.h  main.cpp  main.qml  qml.qrc
src/modules/EMGui/delegates/: CalibrationDelegate.qml  MenuDelegate.qml
src/modules/EMGui/qmlPages/: Calibration.qml  EmgLevelBar.qml  HumanPage.qml  ServerPage.qml
